--- a/A0005_Reflection/A0005_Reflection.csproj
+++ b/A0005_Reflection/A0005_Reflection.csproj
@@ -70,6 +70,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Sample\ObjectClass.cs" />
+    <Compile Include="Sample\RandomOrder.cs" />
     <Compile Include="Sample\ReflectionSample.cs" />
   </ItemGroup>
   <ItemGroup>
