--- a/G0031_QueuingMachine.Test/G0031_QueuingMachine.Test.csproj
+++ b/G0031_QueuingMachine.Test/G0031_QueuingMachine.Test.csproj
@@ -34,7 +34,9 @@
     <StartupObject>G0031_QueuingMachine.Program</StartupObject>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="nunit.framework, Version=2.5.7.10213, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77, processorArchitecture=MSIL" />
+    <Reference Include="nunit.framework">
+      <HintPath>..\packages\NUnit.2.6.4\lib\nunit.framework.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -66,6 +68,9 @@
       <Project>{E3326FA0-D43B-40C1-A69D-8D831A3647ED}</Project>
       <Name>G0031_QueuingMachine.Service</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
