--- a/A1070_Image_Process/A1070_Image_Process.csproj
+++ b/A1070_Image_Process/A1070_Image_Process.csproj
@@ -48,6 +48,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Sample\ImageResize.cs" />
+    <Compile Include="Sample\ImageWatermark.cs" />
     <Compile Include="Sample\TwoImageInOne.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -65,6 +66,11 @@
     <None Include="IMG_6451.jpg">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="MarkImg.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
