--- a/A0622_EF_OneToMany/A0622_EF_OneToMany.csproj
+++ b/A0622_EF_OneToMany/A0622_EF_OneToMany.csproj
@@ -63,6 +63,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Config\SchoolConfig.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Sample\Entities.cs" />
