使用 Glimpse 的测试.

--- a/W1050_Mvc5/W1050_Mvc5.csproj
+++ b/W1050_Mvc5/W1050_Mvc5.csproj
@@ -39,6 +39,28 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="EntityFramework">
+      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.dll</HintPath>
+    </Reference>
+    <Reference Include="EntityFramework.SqlServer">
+      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+    </Reference>
+    <Reference Include="Glimpse.Ado">
+      <HintPath>..\packages\Glimpse.Ado.1.7.3\lib\net45\Glimpse.Ado.dll</HintPath>
+    </Reference>
+    <Reference Include="Glimpse.AspNet">
+      <HintPath>..\packages\Glimpse.AspNet.1.8.0\lib\net45\Glimpse.AspNet.dll</HintPath>
+    </Reference>
+    <Reference Include="Glimpse.Core, Version=1.8.6.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\Glimpse.1.8.6\lib\net45\Glimpse.Core.dll</HintPath>
+    </Reference>
+    <Reference Include="Glimpse.EF6">
+      <HintPath>..\packages\Glimpse.EF6.1.6.5\lib\net45\Glimpse.EF6.dll</HintPath>
+    </Reference>
+    <Reference Include="Glimpse.Mvc5">
+      <HintPath>..\packages\Glimpse.Mvc5.1.5.3\lib\net45\Glimpse.Mvc5.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System" />
     <Reference Include="System.Data" />
@@ -114,6 +136,8 @@
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\TestAsyncController.cs" />
     <Compile Include="Controllers\TestChartController.cs" />
+    <Compile Include="Controllers\TestGlimpseController.cs" />
+    <Compile Include="GlimpseSecurityPolicy.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -160,6 +184,13 @@
     <Content Include="Views\TestChart\Index.cshtml" />
     <Content Include="Views\TestChart\Column.cshtml" />
     <Content Include="Views\TestChart\Pie.cshtml" />
+    <Content Include="Views\TestGlimpse\Index.cshtml" />
+    <Content Include="Views\TestGlimpse\TestPartial.cshtml" />
+    <Content Include="Views\TestGlimpse\Partial1.cshtml" />
+    <Content Include="Views\TestGlimpse\Partial2.cshtml" />
+    <Content Include="Views\TestGlimpse\Partial3.cshtml" />
+    <Content Include="Views\TestGlimpse\TestPartialAjax.cshtml" />
+    <Content Include="Views\TestGlimpse\TestEf.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
