增加通过  HTML5 + js 实现客户端压缩图片， 上传到服务器的处理。

--- a/W0300_WCF_Ajax/W0300_WCF_Ajax.csproj
+++ b/W0300_WCF_Ajax/W0300_WCF_Ajax.csproj
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
@@ -14,6 +15,15 @@
     <AssemblyName>W0300_WCF_Ajax</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <UseIISExpress>true</UseIISExpress>
+    <FileUpgradeFlags>
+    </FileUpgradeFlags>
+    <UpgradeBackupLocation>
+    </UpgradeBackupLocation>
+    <OldToolsVersion>4.0</OldToolsVersion>
+    <IISExpressSSLPort />
+    <IISExpressAnonymousAuthentication />
+    <IISExpressWindowsAuthentication />
+    <IISExpressUseClassicPipelineMode />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -313,6 +323,8 @@
     <Content Include="Touch\style.css" />
     <Content Include="Upload\TestUploadBigFile.aspx" />
     <Content Include="Upload\TestUploadMulFile.aspx" />
+    <Content Include="Upload\UploadResizeImgMini.html" />
+    <Content Include="Upload\UploadResizeImg.html" />
     <Content Include="Upload\UploadLimit.aspx" />
     <Content Include="Upload\UploadPreview.aspx" />
     <Content Include="ztree\ZtreeTest.htm" />
@@ -889,6 +901,7 @@
     <None Include="fonts\glyphicons-halflings-regular.woff2" />
     <None Include="Scripts\jquery-2.0.3.min.map" />
     <Content Include="Upload\BigFileUploadHandler.ashx" />
+    <Content Include="Upload\MyImgUploadHandler.ashx" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AppDemo\AbstractHandler.cs" />
@@ -1106,6 +1119,9 @@
     <Compile Include="Upload\ImgThumbHandler.ashx.cs">
       <DependentUpon>ImgThumbHandler.ashx</DependentUpon>
     </Compile>
+    <Compile Include="Upload\MyImgUploadHandler.ashx.cs">
+      <DependentUpon>MyImgUploadHandler.ashx</DependentUpon>
+    </Compile>
     <Compile Include="Upload\ImgUploadHandler.ashx.cs">
       <DependentUpon>ImgUploadHandler.ashx</DependentUpon>
     </Compile>
@@ -1178,8 +1194,13 @@
     <Content Include="Upload\ImgThumbHandler.ashx" />
     <Content Include="Upload\ImgWaterHandler.ashx" />
   </ItemGroup>
+  <PropertyGroup>
+    <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
+    <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
+  </PropertyGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
-  <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" />
+  <Import Project="$(VSToolsPath)\WebApplications\Microsoft.WebApplication.targets" Condition="'$(VSToolsPath)' != ''" />
+  <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" Condition="false" />
   <ProjectExtensions>
     <VisualStudio>
       <FlavorProperties GUID="{349c5851-65df-11da-9384-00065b846f21}">
