--- a/W1030_Mvc_WebApi2/packages.config
+++ b/W1030_Mvc_WebApi2/packages.config
@@ -6,6 +6,7 @@
   <package id="EntityFramework.zh-Hans" version="6.1.1" targetFramework="net45" />
   <package id="jQuery" version="1.10.2" targetFramework="net45" />
   <package id="jQuery.Validation" version="1.11.1" targetFramework="net45" />
+  <package id="knockoutjs" version="3.4.2" targetFramework="net45" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.1.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Identity.Core.zh-Hans" version="2.1.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Identity.EntityFramework" version="2.1.0" targetFramework="net45" />
