--- a/B2000_AbpEf/B2000_AbpEf.csproj
+++ b/B2000_AbpEf/B2000_AbpEf.csproj
@@ -108,6 +108,7 @@
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Model\Other.cs" />
     <Compile Include="Model\School.cs" />
+    <Compile Include="Model\Student.cs" />
     <Compile Include="Model\Teacher.cs" />
     <Compile Include="Module\B2000_AbpEfAbpModule.cs" />
     <Compile Include="Program.cs" />
