--- a/W1030_Mvc_WebApi2/Web.config
+++ b/W1030_Mvc_WebApi2/Web.config
@@ -4,19 +4,25 @@
   http://go.microsoft.com/fwlink/?LinkId=301879
   -->
 <configuration>
+  
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
+  
+  
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-W1030_Mvc_WebApi2-20150515045338.mdf;Initial Catalog=aspnet-W1030_Mvc_WebApi2-20150515045338;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
+  
   <appSettings></appSettings>
+  
   <system.web>
-    <authentication mode="None" />
+    <authentication mode="Forms" />
     <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" />
   </system.web>
+  
   <system.webServer>
     <modules>
       <remove name="FormsAuthentication" />
