W1030_Mvc_WebApi2 Update

--- a/W1030_Mvc_WebApi2/W1030_Mvc_WebApi2.csproj
+++ b/W1030_Mvc_WebApi2/W1030_Mvc_WebApi2.csproj
@@ -272,6 +272,7 @@
     <Content Include="Scripts\jquery-1.10.2.min.map" />
     <Content Include="Views\Home\TestMyDemo.cshtml" />
     <Content Include="Views\Home\TestMyDemoKnockout.cshtml" />
+    <Content Include="Views\Home\TestValues.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
