W1050_Mvc5 增加 DisplayMode 处理的例子

--- a/W1050_Mvc5/W1050_Mvc5.csproj
+++ b/W1050_Mvc5/W1050_Mvc5.csproj
@@ -131,12 +131,14 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\BundleConfig.cs" />
+    <Compile Include="App_Start\DisplayConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\TestAsyncController.cs" />
     <Compile Include="Controllers\TestChartController.cs" />
     <Compile Include="Controllers\TestGlimpseController.cs" />
+    <Compile Include="Controllers\TestMobileController.cs" />
     <Compile Include="GlimpseSecurityPolicy.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -191,6 +193,11 @@
     <Content Include="Views\TestGlimpse\Partial3.cshtml" />
     <Content Include="Views\TestGlimpse\TestPartialAjax.cshtml" />
     <Content Include="Views\TestGlimpse\TestEf.cshtml" />
+    <Content Include="Views\TestMobile\Index.cshtml" />
+    <Content Include="Views\TestMobile\Index.mobile.cshtml" />
+    <Content Include="Views\TestMobile\Index.tablet.cshtml" />
+    <Content Include="Views\Shared\Error.mobile.cshtml" />
+    <Content Include="Views\Shared\Error.tablet.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
