--- a/W1010_Mvc_Session/Web.config
+++ b/W1010_Mvc_Session/Web.config
@@ -16,7 +16,7 @@
 
 
     <connectionStrings>
-        <add name="DefaultConnection" providerName="System.Data.SqlClient" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=aspnet-W1010_Mvc_Session-20150211112304;Integrated Security=SSPI" />
+        <!--<add name="DefaultConnection" providerName="System.Data.SqlClient" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=aspnet-W1010_Mvc_Session-20150211112304;Integrated Security=SSPI" />-->
     </connectionStrings>
 
 
@@ -46,11 +46,14 @@
 
         <!-- 
         测试 Session 的配置.  
-        三分钟在页面无任何操作则Session失效
+          1. 三分钟在页面无任何操作则Session失效.  （默认值=20）
+          2. 自动检测浏览器是否支持 Cookie. 
+             (AutoDetect ：ASP.NET 确定请求浏览器或设备是否支持 Cookie。 如果请求浏览器或请求设备支持 Cookie，则 AutoDetect 使用 Cookie 来保留用户数据；否则，将在查询字符串中使用一个标识符。 如果浏览器或设备支持 Cookie，但当前禁用了 Cookie，则请求功能仍会使用 Cookie。) 
+            （默认值= UseCookies ：无论浏览器或设备是否支持 Cookie，都使用 Cookie 来保留用户数据。 ）
         -->
-        <sessionState mode="InProc" timeout="3">
+        <sessionState mode="InProc" timeout="3" cookieless="AutoDetect">
         </sessionState>
-        
+
     </system.web>
     <system.webServer>
         <validation validateIntegratedModeConfiguration="false" />
