--- a/R0100_Rx/packages.config
+++ b/R0100_Rx/packages.config
@@ -5,5 +5,6 @@
   <package id="System.Reactive.Interfaces" version="3.1.1" targetFramework="net45" />
   <package id="System.Reactive.Linq" version="3.1.1" targetFramework="net45" />
   <package id="System.Reactive.PlatformServices" version="3.1.1" targetFramework="net45" />
+  <package id="System.Reactive.Windows.Forms" version="3.1.1" targetFramework="net45" />
   <package id="System.Reactive.Windows.Threading" version="3.1.1" targetFramework="net45" />
 </packages>
