--- a/R0100_Rx/R0100_Rx.csproj
+++ b/R0100_Rx/R0100_Rx.csproj
@@ -85,11 +85,23 @@
     <Compile Include="UI2\FormConditionalAndBoolean.Designer.cs">
       <DependentUpon>FormConditionalAndBoolean.cs</DependentUpon>
     </Compile>
+    <Compile Include="UI2\FormConnectable.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="UI2\FormConnectable.Designer.cs">
+      <DependentUpon>FormConnectable.cs</DependentUpon>
+    </Compile>
     <Compile Include="UI2\FormErrorHandling.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="UI2\FormErrorHandling.Designer.cs">
       <DependentUpon>FormErrorHandling.cs</DependentUpon>
+    </Compile>
+    <Compile Include="UI2\FormMathematicalAndAggregate .cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="UI2\FormMathematicalAndAggregate .Designer.cs">
+      <DependentUpon>FormMathematicalAndAggregate .cs</DependentUpon>
     </Compile>
     <Compile Include="UI2\FormUtilityOperators.cs">
       <SubType>Form</SubType>
@@ -232,8 +244,14 @@
     <EmbeddedResource Include="UI2\FormConditionalAndBoolean.resx">
       <DependentUpon>FormConditionalAndBoolean.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="UI2\FormConnectable.resx">
+      <DependentUpon>FormConnectable.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="UI2\FormErrorHandling.resx">
       <DependentUpon>FormErrorHandling.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="UI2\FormMathematicalAndAggregate .resx">
+      <DependentUpon>FormMathematicalAndAggregate .cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="UI2\FormUtilityOperators.resx">
       <DependentUpon>FormUtilityOperators.cs</DependentUpon>
