--- a/W1050_Mvc5/Web.config
+++ b/W1050_Mvc5/Web.config
@@ -37,6 +37,8 @@
       <add path="glimpse.axd" verb="GET" type="Glimpse.AspNet.HttpHandler, Glimpse.AspNet" />
     </httpHandlers>
   </system.web>
+  
+  
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
@@ -65,21 +67,27 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+  
   <glimpse defaultRuntimePolicy="On" endpointBaseUri="~/Glimpse.axd">
     <!-- 
           For more information on how to configure Glimpse, please visit http://getglimpse.com/Help/Configuration
           or access {your site}/Glimpse.axd for even more details and a Configuration Tool to support you. 
       -->
   </glimpse>
+  
+  
   <system.webServer>
     <validation validateIntegratedModeConfiguration="false" />
     <modules>
       <add name="Glimpse" type="Glimpse.AspNet.HttpModule, Glimpse.AspNet" preCondition="integratedMode" />
+      <add name="CultureAwareHttpModule" type="W1050_Mvc5.Module.CultureAwareHttpModule"/>
     </modules>
     <handlers>
-      <add name="Glimpse" path="glimpse.axd" verb="GET" type="Glimpse.AspNet.HttpHandler, Glimpse.AspNet" preCondition="integratedMode" />
+      <add name="Glimpse" path="glimpse.axd" verb="GET" type="Glimpse.AspNet.HttpHandler, Glimpse.AspNet" preCondition="integratedMode" />      
     </handlers>
   </system.webServer>
+  
+  
   
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
