--- a/W1030_Mvc_WebApi2_Client/W1030_Mvc_WebApi2_Client.csproj
+++ b/W1030_Mvc_WebApi2_Client/W1030_Mvc_WebApi2_Client.csproj
@@ -46,6 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="I18nTest.cs" />
     <Compile Include="OAuthClientTest.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
