--- a/W1050_Mvc5/Web.config
+++ b/W1050_Mvc5/Web.config
@@ -20,7 +20,7 @@
   </appSettings>
   <system.web>
     <!-- 注意，在Web.config中，当compilation编译的debug属性设为true时，表示项目处于调试模式，这时Bundle是不会将文件进行打包压缩的  -->
-    <compilation debug="false" targetFramework="4.5"/>
+    <compilation debug="true" targetFramework="4.5"/>
     <httpRuntime targetFramework="4.5"/>
     <!-- Glimpse: This can be commented in to add additional data to the Trace tab when using WebForms
         <trace writeToDiagnosticsTrace="true" enabled="true" pageOutput="false"/> -->
