--- a/A0055_GenericMethod/A0055_GenericMethod.csproj
+++ b/A0055_GenericMethod/A0055_GenericMethod.csproj
@@ -45,6 +45,7 @@
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Sample\RandomAdd.cs" />
     <Compile Include="Sample\RandomOrder.cs" />
   </ItemGroup>
   <ItemGroup />
